# bot_assistant-_mentor

./: README.md
bot_assistant/: pyproject.toml
bot_assistant/django_src/config/: settings.py
