[tool.poetry]
name = "bot-assistant"
version = "0.1.0"
description = ""
authors = ["Not-user-1984 <dmitri.pluzhnikov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
